@@ -26,6 +26,7 @@ NEW: [features/improvements]
 +Add menu shortcut for toggle fold.
 +Add a verbose debug mode for view stack tracebacks in editra log messages.
 +Updated (Italian, Japanese, Latvian, Polish, Russian, Spanish, Turkish) Translations.
++Reuse existing find results screens more effectively.
 
 BUG FIXES:
 +Fix find options not properly being syncronized between dialog and find bar.
